@@ -3,7 +3,7 @@ name: foo
 sources:
   git:
     config:
-      checkout-submodules: False
+      checkout-submodules: True
 elements:
   manual:
     config:
